# smart-support-bot

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 20250124_01_initial_schema.py
app/: api_main.py  bot_main.py
app/api/: dependencies.py  errors.py  router.py
app/api/routes/: faq.py  tickets.py  users.py
app/bot/: router.py
app/bot/handlers/: faq.py  help.py  start.py  tickets.py
app/bot/keyboards/: reply.py
app/bot/states/: ticket.py
app/config/: logging.py  settings.py
app/db/: base.py  init_db.py  models.py  session.py
app/models/: faq.py  ticket.py  user.py
app/schemas/: faq.py  ticket.py  user.py
app/services/: admin_user_service.py  faq_service.py  ticket_service.py  user_service.py
app/utils/: enums.py
